--- a/plugin.xml
+++ b/plugin.xml
@@ -27,6 +27,10 @@
         <param name="android-package" value="com.adobe.plugins.GAPlugin"/>
       </feature>
         </config-file>
+        
+        <config-file target="AndroidManifest.xml" parent="/manifest">
+ +        <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+ +      </config-file>
 
         <source-file src="src/android/GAPlugin.java"
                 target-dir="src/com/adobe/plugins" />
