--- a/plugin.xml
+++ b/plugin.xml
@@ -62,5 +62,6 @@
         <framework src="CoreData.framework" />
         <framework src="SystemConfiguration.framework" />
         <framework src="libz.dylib" />
+        <framework src="libsqlite3.0.dylib" />
     </platform>
 </plugin>
