--- a/plugin.xml
+++ b/plugin.xml
@@ -1,68 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    id="com.adobe.plugins.GAPlugin"
-    version="2.3.1">
+		xmlns:android="http://schemas.android.com/apk/res/android"
+		id="com.adobe.plugins.GAPlugin"
+		version="2.3.1">
 
-    <name>GAPlugin</name>
-  <author>Bob Easterday</author>
+	<name>GAPlugin</name>
+	<author>Bob Easterday</author>
 
-  <description>
-    This plugin allows you to post usage information to your Google Analytics account.
-  </description>
+	<description>
+		This plugin allows you to post usage information to your Google Analytics account.
+	</description>
 
-  <license>MIT</license>
+	<license>MIT</license>
 
-  <js-module src="www/GAPlugin.js" name="GAPlugin">
-      <clobbers target="GAPlugin" />
-  </js-module>
+	<js-module src="www/GAPlugin.js" name="GAPlugin">
+		<clobbers target="GAPlugin" />
+	</js-module>
 
-  <engines>
-      <engine name="cordova" version="&gt;=3.0.0" />
-  </engines>
+	<engines>
+		<engine name="cordova" version="&gt;=3.0.0" />
+	</engines>
 
-    <platform name="android">
-        <config-file target="res/xml/config.xml" parent="/*">
-      <feature name="GAPlugin" >
-        <param name="android-package" value="com.adobe.plugins.GAPlugin"/>
-      </feature>
-        </config-file>
+	<platform name="android">
+		<config-file target="res/xml/config.xml" parent="/*">
+			<feature name="GAPlugin" >
+					<param name="android-package" value="com.adobe.plugins.GAPlugin"/>
+			</feature>
+		</config-file>
+		<config-file target="AndroidManifest.xml" parent="/manifest">
+			<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+		</config-file>
 
-        <config-file target="AndroidManifest.xml" parent="/manifest">
-          <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-        </config-file>
+		<source-file src="src/android/GAPlugin.java" target-dir="src/com/adobe/plugins" />
+		<framework src="com.google.gms:google-services:3.0.0" />
+		<framework src="com.google.android.gms:play-services-analytics:10.2.4" />
+		<hook type="after_plugin_add" src="src/hooks/androidAfterInstall.js" />
+	</platform>
 
-        <source-file src="src/android/GAPlugin.java"
-                target-dir="src/com/adobe/plugins" />
-        <source-file src="src/android/libGoogleAnalyticsV2.jar"
-                target-dir="libs" />
-    </platform>
+	<platform name="ios">
+		<config-file target="config.xml" parent="/*">
+			<feature name="GAPlugin">
+				<param name="ios-package" value="GAPlugin"/>
+			</feature>
+		</config-file>
 
-    <platform name="ios">
-        <config-file target="config.xml" parent="/*">
-          <feature name="GAPlugin">
-            <param name="ios-package" value="GAPlugin"/>
-          </feature>
-        </config-file>
+		<source-file src="src/ios/GAPlugin.m" />
+		<source-file src="src/ios/libGoogleAnalyticsServices.a" framework="true" />
 
-        <source-file src="src/ios/GAPlugin.m" />
-        <source-file src="src/ios/libGoogleAnalyticsServices.a" framework="true" />
+		<header-file src="src/ios/GAITracker.h" />
+		<header-file src="src/ios/GAIEcommerceFields.h" />
+		<header-file src="src/ios/GAITrackedViewController.h" />
+		<header-file src="src/ios/GAIDictionaryBuilder.h" />
+		<header-file src="src/ios/GAIEcommerceProductAction.h" />
+		<header-file src="src/ios/GAIEcommerceProduct.h" />
+		<header-file src="src/ios/GAIEcommercePromotion.h" />
+		<header-file src="src/ios/GAIFields.h" />
+		<header-file src="src/ios/GAILogger.h" />
+		<header-file src="src/ios/GAI.h" />
+		<header-file src="src/ios/GAPlugin.h" />
 
-        <header-file src="src/ios/GAITracker.h" />
-        <header-file src="src/ios/GAIEcommerceFields.h" />
-        <header-file src="src/ios/GAITrackedViewController.h" />
-        <header-file src="src/ios/GAIDictionaryBuilder.h" />
-        <header-file src="src/ios/GAIEcommerceProductAction.h" />
-        <header-file src="src/ios/GAIEcommerceProduct.h" />
-        <header-file src="src/ios/GAIEcommercePromotion.h" />
-        <header-file src="src/ios/GAIFields.h" />
-        <header-file src="src/ios/GAILogger.h" />
-        <header-file src="src/ios/GAI.h" />
-        <header-file src="src/ios/GAPlugin.h" />
-
-        <framework src="CoreData.framework" />
-        <framework src="SystemConfiguration.framework" />
-        <framework src="libz.dylib" />
-        <framework src="libsqlite3.0.dylib" />
-    </platform>
+		<framework src="CoreData.framework" />
+		<framework src="SystemConfiguration.framework" />
+		<framework src="libz.dylib" />
+		<framework src="libsqlite3.0.dylib" />
+	</platform>
 </plugin>
